@@ -15,6 +15,7 @@ CVS			+ Added a cron replacement for users who don't have access to the cron uti
 			  - 2003-01-13:  If a random or timestamp variable was used in the destination URL of a HTML banner it wasn't replaced  (Niels)
 			  - 2003-01-13:  Random variable replacement larger than 9 wasn't working at all for external banners when using plain remote invocation  (Niels)
 			  - 2003-01-14:  Konqueror browser detection in adlayer wasn't based on a very outdated useragent, now fixed  (Niels)
+			  - 2003-01-14:  If register_globals was turned on and cookies were favored by variable_order, the value of a cookie overwrote a GET or POST variable with the same name  (Niels)
 			
 
 v 2.0rc2		+ Misc bugfixes
